--- a/42690-h/42690-h.htm
+++ b/42690-h/42690-h.htm
@@ -101,7 +101,7 @@ Author: Alexandre Dumas
 Translator: Henry Llewellyn Williams
 
 Release Date: May 11, 2013 [EBook #42690]
-[Last updated: May 28, 2013]
+[Last updated: September 17,2014]
 
 Language: English
 
@@ -5185,7 +5185,7 @@ favored what will be deadly.</p>
 the foremost man in the realm. It was Choiseul whom I have removed. This
 important work was undertaken by many intriguers and much hatred during
 ten years, but I accomplished it in a few months, by means which it is
-useless to describe. By a secret, which is one of my strong eans, the
+useless to describe. By a secret, which is one of my strong means, the
 greater as it must remain hidden from all eyes and never be manifested
 save by its effect, I have overturned and driven away Choiseul. Look at
 the fruit of the toil: all France is crying for Choiseul and rising to
@@ -5610,7 +5610,7 @@ comfort, but he met indifference on all sides, steel in every eye.</p>
 to check the screams which agony would tear from him.</p>
 
 <p>Still, when he felt the kindly heavy hand of the porter on his shoulder,
-and the aid’ arms interlance him like serpents, and heard the operator’s
+and the aid's arms interlace him like serpents, and heard the operator’s
 voice saying “Keep up your pluck my brave man!” he ventured to break the
 stillness by asking in a plaintive tone:</p>
 
@@ -6200,7 +6200,7 @@ accompanies grace, beauty and virtue, it enchants him. Now, your girl
 unites all these gifts in an eminent degree so that he is delighted by
 her.”</p>
 
-<p>“I wish you would make the word ‘delighte’ clearer, duke,” said the
+<p>“I wish you would make the word ‘delighted’ clearer, duke,” said the
 other, putting on an air of dignity more grotesque than the speaker’s,
 which the latter thought grotesque as he did not like pretences.</p>
 
@@ -6600,7 +6600,7 @@ that there is no room for a comparison between the old age of Louis XIV.
 and Louis XV. at his prime.”</p>
 
 <p>The King was in the meet state this evening to receive this praise,
-which fell on him like the spray from the Fountain of Youth, or Althota’
+which fell on him like the spray from the Fountain of Youth, or Althota’s
 magic elixir.</p>
 
 <p>Thinking the opening had come, Richelieu gave Taverney the hint by
@@ -8696,7 +8696,7 @@ cause, and my wrath will be dreadful!”</p>
 
 <p>As these final words made a spark flash from his dying eye, the hideous
 old man fell back in a convulsion succeeded by violent coughing. Balsamo
-at once gave him the most eager cares. The old doctor came to his
+at once gave him the most eager care. The old doctor came to his
 senses; his pallor was worse; this slight shaking had so exhausted him
 that he seemed about to die.<a name="page_184" id="page_184"></a></p>
 
